--- a/DEVOIR_2/bin/.gitignore
+++ b/DEVOIR_2/bin/.gitignore
@@ -1,7 +1,1 @@
-/Nourriture.class
-/Pigeon.class
-/Danger.class
-/IComportement.class
-/Fuite.class
-/Idle.class
-/AllerManger.class
+/Comportement.class
